# ChangeLog for sys-apps/portage
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.63 2006/01/17 01:52:49 genone Exp $

  01 Jan 2006; Jason Stubbs <jstubbs@gentoo.org>
  portage-2.1_pre3-r1.ebuild:
  Interim fix for xterm titles leaking to the terminal.

  31 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  portage-2.0.51.22-r3.ebuild, portage-2.0.53.ebuild, portage-2.0.54.ebuild,
  portage-2.1_pre3.ebuild:
  Pull in portage-manpages automagically via USE=doc.

*portage-2.1_pre3 (31 Dec 2005)

  31 Dec 2005; Jason Stubbs <jstubbs@gentoo.org>
  +portage-2.1_pre3.ebuild:
  Bug fix release for 2.1.

*portage-2.0.54 (31 Dec 2005)

  31 Dec 2005; Jason Stubbs <jstubbs@gentoo.org>
  +portage-2.0.54.ebuild:
  Maintenance release for 2.0.

  27 Dec 2005; Jason Stubbs <jstubbs@gentoo.org> 
  portage-2.1_pre2.ebuild:
  Updated python dependency to 2.3 as python 2.2 can no longer cut it.

  26 Dec 2005; Jose Luis Rivero <yoswink@gentoo.org> portage-2.0.53.ebuild:
  Stable on alpha wrt #108082

*portage-2.1_pre2 (25 Dec 2005)

  25 Dec 2005; Jason Stubbs <jstubbs@gentoo.org>
  +portage-2.1_pre2.ebuild:
  Second release of subversion trunk.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> portage-2.0.53.ebuild:
  Stable on ppc.

  22 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> portage-2.0.53.ebuild:
  Stable on sparc wrt #108082

  21 Dec 2005; Luis Medinas <metalgod@gentoo.org> portage-2.0.53.ebuild:
  Stable on amd64. See bug #108082.

  21 Dec 2005; Markus Rothe <corsair@gentoo.org> portage-2.0.53.ebuild:
  Stable on ppc64

  21 Dec 2005; Petteri Räty <betelgeuse@gentoo.org> portage-2.0.53.ebuild:
  Marked stable on x86 for bug #108082.

  18 Dec 2005; Jason Stubbs <jstubbs@gentoo.org>
  portage-2.1_pre1.ebuild:
  Add a notice informing of the cache format change and to `emerge
  metadata` before using emerge.

  17 Dec 2005; Jason Stubbs <jstubbs@gentoo.org>