@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.63 2006/01/17 01:52:49 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.64 2006/01/20 14:11:45 jstubbs Exp $
+
+  20 Jan 2006; Jason Stubbs <jstubbs@gentoo.org>
+  portage-2.0.53.ebuild, portage-2.0.54.ebuild, portage-2.1_pre3.ebuild:
+  Moving portage-manpages dependency from PDEPEND to RDEPEND as there's no
+  specific need for it to be installed after portage and is triggering a
+  long-standing bug.
 
   01 Jan 2006; Jason Stubbs <jstubbs@gentoo.org>
   portage-2.1_pre3-r1.ebuild:
